--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/online"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="下线"
+                android:text="上线"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
         </LinearLayout>
